improved inference service
